Bug 101521 - iwlwifi: WARNING when setting Tx power with WEXT while in RFKILL - MWG100249491
Summary: iwlwifi: WARNING when setting Tx power with WEXT while in RFKILL - MWG100249491
Status: CLOSED CODE_FIX
Alias: None
Product: Drivers
Classification: Unclassified
Component: network-wireless (show other bugs)
Hardware: x86-64 Linux
: P1 normal
Assignee: DO NOT USE - assign "network-wireless-intel" component instead
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2015-07-14 20:35 UTC by Martin Mokrejs
Modified: 2015-11-02 19:42 UTC (History)
1 user (show)

See Also:
Kernel Version: 4.1.2
Subsystem:
Regression: No
Bisected commit-id:


Attachments
lspci -vvvx (37.38 KB, text/plain)
2015-07-14 20:35 UTC, Martin Mokrejs
Details
dmesg-4.1.2 (101.76 KB, text/plain)
2015-07-14 20:35 UTC, Martin Mokrejs
Details
fix (1.32 KB, patch)
2015-11-02 13:54 UTC, Emmanuel Grumbach
Details | Diff

Description Martin Mokrejs 2015-07-14 20:35:13 UTC
Created attachment 182661 [details]
lspci -vvvx

I am testing vanilla linux-4.1.2 kernel on Dell Vostro 3550 laptop with A12 BIOS. During cold boot I received:

[   20.114785] r8169 0000:05:00.0: Direct firmware load for rtl_nic/rtl8168e-2.fw failed with error -2
[   20.114795] r8169 0000:05:00.0 enp5s0: unable to load firmware patch rtl_nic/rtl8168e-2.fw (-2)
[   20.138835] r8169 0000:05:00.0 enp5s0: link down
[   20.493918] ------------[ cut here ]------------
[   20.493928] WARNING: CPU: 2 PID: 3162 at net/mac80211/driver-ops.h:12 ieee80211_bss_info_change_notify+0x1e2/0x1f0()
[   20.493930] wlp9s0:  Failed check-sdata-in-driver check, flags: 0x0
[   20.493931] Modules linked in: fuse x86_pkg_temp_thermal intel_powerclamp kvm_intel kvm ums_realtek uas iwldvm usb_storage iwlwifi dell_smo8800
[   20.493942] CPU: 2 PID: 3162 Comm: iwconfig Not tainted 4.1.2-default-pciehp #2
[   20.493943] Hardware name: Dell Inc. Vostro 3550/, BIOS A12 02/18/2014
[   20.493945]  ffffffff81dadc75 ffff88040aff7b68 ffffffff819c6a7d ffffffff81128822
[   20.493947]  ffff88040aff7bb8 ffff88040aff7ba8 ffffffff810d2f05 0000000000000000
[   20.493950]  0000000000040000 ffff8800d97089e0 ffff88040ced4a00 ffff8800d9708460
[   20.493952] Call Trace:
[   20.493957]  [<ffffffff819c6a7d>] dump_stack+0x45/0x57
[   20.493960]  [<ffffffff81128822>] ? console_unlock+0x282/0x4a0
[   20.493963]  [<ffffffff810d2f05>] warn_slowpath_common+0x85/0xc0
[   20.493965]  [<ffffffff810d2f81>] warn_slowpath_fmt+0x41/0x50
[   20.493967]  [<ffffffff8195b1d2>] ieee80211_bss_info_change_notify+0x1e2/0x1f0
[   20.493970]  [<ffffffff81974afd>] ieee80211_recalc_txpower+0x2d/0x40
[   20.493973]  [<ffffffff8197bab7>] ieee80211_set_tx_power+0x47/0x1a0
[   20.493975]  [<ffffffff81955bea>] cfg80211_wext_siwtxpower+0xaa/0x1d0
[   20.493977]  [<ffffffff81958b9f>] ioctl_standard_call+0x4f/0xe0
[   20.493979]  [<ffffffff81958b50>] ? ioctl_standard_iw_point+0x3a0/0x3a0
[   20.493981]  [<ffffffff8195873d>] wireless_process_ioctl.constprop.9+0x8d/0x100
[   20.493983]  [<ffffffff81958ddd>] wext_handle_ioctl+0x5d/0xb0
[   20.493985]  [<ffffffff81806fd9>] dev_ioctl+0x339/0x6f0
[   20.493990]  [<ffffffff817ce2a2>] sock_ioctl+0x142/0x2e0
[   20.493993]  [<ffffffff81210968>] do_vfs_ioctl+0x2f8/0x530
[   20.493996]  [<ffffffff8121c4a4>] ? __fget_light+0x64/0x90
[   20.493998]  [<ffffffff81210bdc>] SyS_ioctl+0x3c/0x80
[   20.494001]  [<ffffffff819d279b>] system_call_fastpath+0x16/0x73
[   20.494002] ---[ end trace 0c521a819f5fe0d4 ]---
[   21.784629] r8169 0000:05:00.0 enp5s0: link up


05:00.0 Ethernet controller: Realtek Semiconductor Co., Ltd. RTL8111/8168/8411 PCI Express Gigabit Ethernet Controller (rev 06)
09:00.0 Network controller: Intel Corporation Centrino Wireless-N 1030 [Rainbow Peak] (rev 34)


05:00.0 Ethernet controller: Realtek Semiconductor Co., Ltd. RTL8111/8168/8411 PCI Express Gigabit Ethernet Controller (rev 06)
        Subsystem: Dell RTL8111/8168/8411 PCI Express Gigabit Ethernet Controller
        Flags: bus master, fast devsel, latency 0, IRQ 30
        I/O ports at e000 [size=256]
        Memory at f1104000 (64-bit, prefetchable) [size=4K]
        Memory at f1100000 (64-bit, prefetchable) [size=16K]
        Capabilities: [40] Power Management version 3
        Capabilities: [50] MSI: Enable+ Count=1/1 Maskable- 64bit+
        Capabilities: [70] Express Endpoint, MSI 01
        Capabilities: [b0] MSI-X: Enable- Count=4 Masked-
        Capabilities: [d0] Vital Product Data
        Capabilities: [100] Advanced Error Reporting
        Capabilities: [140] Virtual Channel
        Capabilities: [160] Device Serial Number 01-00-00-00-68-4c-e0-00
        Kernel driver in use: r8169

09:00.0 Network controller: Intel Corporation Centrino Wireless-N 1030 [Rainbow Peak] (rev 34)
        Subsystem: Intel Corporation Centrino Wireless-N 1030 BGN
        Flags: bus master, fast devsel, latency 0, IRQ 42
        Memory at f7e00000 (64-bit, non-prefetchable) [size=8K]
        Capabilities: [c8] Power Management version 3
        Capabilities: [d0] MSI: Enable+ Count=1/1 Maskable- 64bit+
        Capabilities: [e0] Express Endpoint, MSI 00
        Capabilities: [100] Advanced Error Reporting
        Capabilities: [140] Device Serial Number 4c-80-93-ff-ff-15-e6-c7
        Kernel driver in use: iwlwifi
        Kernel modules: iwlwifi
Comment 1 Martin Mokrejs 2015-07-14 20:35:34 UTC
Created attachment 182671 [details]
dmesg-4.1.2
Comment 2 Emmanuel Grumbach 2015-07-15 21:08:37 UTC
Reproducible?
Comment 3 Emmanuel Grumbach 2015-07-30 12:29:49 UTC
This is probably a regression in wext handling.
Please try with iw.
Comment 4 Martin Mokrejs 2015-08-28 11:49:28 UTC
(In reply to Emmanuel Grumbach from comment #2)
> Reproducible?

I get it with every my boot-up attempt, using 4.1.2 or 4.1.3. Also with 4.0.5 but not with 3.18.18.
Comment 5 Martin Mokrejs 2015-10-30 22:08:56 UTC
I still get it with 4.3-rc7:

[    8.282278] systemd-udevd[2249]: starting version 225
[    9.573472] r8169 0000:05:00.0 enp5s0: renamed from eth0
[    9.619837] systemd-udevd[2313]: Process 'net.sh eth0 start' failed with exit code 1.
[   10.020380] Intel(R) Wireless WiFi driver for Linux
[   10.020382] Copyright(c) 2003- 2015 Intel Corporation
[   10.167657] iwlwifi 0000:09:00.0: loaded firmware version 18.168.6.1 op_mode iwldvm
[   12.047957] iwlwifi 0000:09:00.0: CONFIG_IWLWIFI_DEBUG disabled
[   12.047963] iwlwifi 0000:09:00.0: CONFIG_IWLWIFI_DEBUGFS disabled
[   12.047966] iwlwifi 0000:09:00.0: CONFIG_IWLWIFI_DEVICE_TRACING disabled
[   12.047970] iwlwifi 0000:09:00.0: Detected Intel(R) Centrino(R) Wireless-N 1030 BGN, REV=0xB0
[   12.048381] iwlwifi 0000:09:00.0: L1 Disabled - LTR Disabled
[   12.055528] iwlwifi 0000:09:00.0: RF_KILL bit toggled to disable radio.
[   12.069138] ieee80211 phy0: Selected rate control algorithm 'iwl-agn-rs'
[   12.097490] iwlwifi 0000:09:00.0 wlp9s0: renamed from wlan0
[   12.136979] systemd-udevd[2325]: Process 'net.sh wlan0 start' failed with exit code 1.
[   13.320946] cfg80211: World regulatory domain updated:
[   13.320958] cfg80211:  DFS Master region: unset
[   13.320962] cfg80211:   (start_freq - end_freq @ bandwidth), (max_antenna_gain, max_eirp), (dfs_cac_time)
[   13.320971] cfg80211:   (2402000 KHz - 2472000 KHz @ 40000 KHz), (N/A, 2000 mBm), (N/A)
[   13.320977] cfg80211:   (2457000 KHz - 2482000 KHz @ 40000 KHz), (N/A, 2000 mBm), (N/A)
[   13.320982] cfg80211:   (2474000 KHz - 2494000 KHz @ 20000 KHz), (N/A, 2000 mBm), (N/A)
[   13.320988] cfg80211:   (5170000 KHz - 5250000 KHz @ 80000 KHz, 160000 KHz AUTO), (N/A, 2000 mBm), (N/A)
[   13.320995] cfg80211:   (5250000 KHz - 5330000 KHz @ 80000 KHz, 160000 KHz AUTO), (N/A, 2000 mBm), (0 s)
[   13.321001] cfg80211:   (5490000 KHz - 5730000 KHz @ 160000 KHz), (N/A, 2000 mBm), (0 s)
[   13.321006] cfg80211:   (5735000 KHz - 5835000 KHz @ 80000 KHz), (N/A, 2000 mBm), (N/A)
[   13.321011] cfg80211:   (57240000 KHz - 63720000 KHz @ 2160000 KHz), (N/A, 0 mBm), (N/A)
[   17.926667] r8169 0000:05:00.0: Direct firmware load for rtl_nic/rtl8168e-2.fw failed with error -2
[   17.926676] r8169 0000:05:00.0 enp5s0: unable to load firmware patch rtl_nic/rtl8168e-2.fw (-2)
[   17.949824] r8169 0000:05:00.0 enp5s0: link down
[   17.949929] r8169 0000:05:00.0 enp5s0: link down
[   18.410543] ------------[ cut here ]------------
[   18.410557] WARNING: CPU: 0 PID: 3533 at net/mac80211/driver-ops.h:12 ieee80211_bss_info_change_notify+0x1a8/0x1b0()
[   18.410559] wlp9s0:  Failed check-sdata-in-driver check, flags: 0x0
[   18.410562] Modules linked in: fuse iwldvm uvcvideo x86_pkg_temp_thermal intel_powerclamp ums_realtek videobuf2_vmalloc videobuf2_memops uas videobuf2_core usb_storage kvm_intel kvm iwlwifi
[   18.410583] CPU: 0 PID: 3533 Comm: iwconfig Not tainted 4.3.0-rc7-default-pciehp #1
[   18.410585] Hardware name: Dell Inc. Vostro 3550/, BIOS A12 02/18/2014
[   18.410588]  ffffffff81dd1f48 ffff8800da1a7bc8 ffffffff813a42e2 ffff8800da1a7c10
[   18.410593]  ffff8800da1a7c00 ffffffff810d3031 0000000000040000 ffff8800d95d0aa0
[   18.410598]  ffff8800da10ca40 ffff8800d95d0500 0000000000000002 ffff8800da1a7c60
[   18.410603] Call Trace:
[   18.410610]  [<ffffffff813a42e2>] dump_stack+0x44/0x62
[   18.410616]  [<ffffffff810d3031>] warn_slowpath_common+0x81/0xc0
[   18.410620]  [<ffffffff810d30b7>] warn_slowpath_fmt+0x47/0x50
[   18.410625]  [<ffffffff8194d28b>] ? __ieee80211_recalc_txpower+0x1db/0x230
[   18.410629]  [<ffffffff81935748>] ieee80211_bss_info_change_notify+0x1a8/0x1b0
[   18.410632]  [<ffffffff8194d30d>] ieee80211_recalc_txpower+0x2d/0x40
[   18.410637]  [<ffffffff81954713>] ieee80211_set_tx_power+0x43/0x180
[   18.410641]  [<ffffffff819305c6>] cfg80211_wext_siwtxpower+0xa6/0x1a0
[   18.410645]  [<ffffffff819331bb>] ioctl_standard_call+0x4b/0xc0
[   18.410648]  [<ffffffff81933170>] ? ioctl_standard_iw_point+0x370/0x370
[   18.410652]  [<ffffffff81932d9d>] wireless_process_ioctl.constprop.9+0x8d/0xf0
[   18.410656]  [<ffffffff819333cd>] wext_handle_ioctl+0x5d/0xb0
[   18.410662]  [<ffffffff817eb4d9>] dev_ioctl+0x349/0x710
[   18.410668]  [<ffffffff811cf600>] ? handle_mm_fault+0xb40/0x1080
[   18.410673]  [<ffffffff811cf600>] ? handle_mm_fault+0xb40/0x1080
[   18.410677]  [<ffffffff817b3060>] sock_ioctl+0x140/0x2e0
[   18.410682]  [<ffffffff8120e6ac>] do_vfs_ioctl+0x2fc/0x550
[   18.410687]  [<ffffffff819a2346>] ? retint_user+0x18/0x1d
[   18.410690]  [<ffffffff812199a1>] ? __fget_light+0x61/0x90
[   18.410693]  [<ffffffff8120e93c>] SyS_ioctl+0x3c/0x70
[   18.410697]  [<ffffffff819a181b>] entry_SYSCALL_64_fastpath+0x16/0x73
[   18.410700] ---[ end trace 7041893bb80c3a30 ]---
Comment 6 Emmanuel Grumbach 2015-10-31 19:08:16 UTC
Wait - this is not even with an Intel device?

Removing Intel from here.
Comment 7 Emmanuel Grumbach 2015-11-01 09:37:01 UTC
Ah sorry. I got confused by your Realtek device asking for FW.
Sorry...
Comment 8 Emmanuel Grumbach 2015-11-01 09:37:52 UTC
Please try with iw (note that I already asked that in July...
Comment 9 Martin Mokrejs 2015-11-01 11:56:16 UTC
Hi Emmanuel,
  thank for hints. I installed net-wireless/iw-4.3 from Gentoo tree (https://git.kernel.org/cgit/linux/kernel/git/jberg/iw.git/), what command do you want me to try? The above messages happen during network being started by OpenRC I guess so do I have to disable the wireless networking in /etc/conf.d/net before fiddling with "iw" utility?
Comment 10 Emmanuel Grumbach 2015-11-01 12:09:08 UTC
Then I'd warmly recommend that OpenRC moves to use nl80211 APIs and not the old WEXT interface. This doesn't allow the kernel to introduce regressions of course.

In this case, I don't really see what OpenRC tries to do but it seems quite insane. It tries to change the Tx power of a device that doesn't exist yet or something like that.

Do you have a way to record tracing?
Comment 11 Emmanuel Grumbach 2015-11-01 12:17:27 UTC
Can you try with this patch on OpenRC?


diff --git a/init.d.misc/wpa_supplicant.in b/init.d.misc/wpa_supplicant.in
index d924612..55026d5 100644
--- a/init.d.misc/wpa_supplicant.in
+++ b/init.d.misc/wpa_supplicant.in
@@ -5,7 +5,7 @@
 command=/usr/sbin/wpa_supplicant
 : ${wpa_supplicant_conf:=/etc/wpa_supplicant.conf}
 wpa_supplicant_if=${wpa_supplicant_if:+-i}$wpa_supplicant_if
-command_args="$wpa_supplicant_args -B -c$wpa_supplicant_conf $wpa_supplicant_if"
+command_args="$wpa_supplicant_args -Dnl80211 -B -c$wpa_supplicant_conf $wpa_supplicant_if"
 name="WPA Supplicant Daemon"
 
 depend()
Comment 12 Emmanuel Grumbach 2015-11-02 08:08:21 UTC
I could repro.

WIP...
Comment 13 Emmanuel Grumbach 2015-11-02 13:54:25 UTC
Created attachment 191841 [details]
fix

Here is the fix. Please test.
Comment 14 Martin Mokrejs 2015-11-02 17:53:01 UTC
(In reply to Emmanuel Grumbach from comment #11)
> Can you try with this patch on OpenRC?
> 
> 
> diff --git a/init.d.misc/wpa_supplicant.in b/init.d.misc/wpa_supplicant.in
> index d924612..55026d5 100644
> --- a/init.d.misc/wpa_supplicant.in
> +++ b/init.d.misc/wpa_supplicant.in
> @@ -5,7 +5,7 @@
>  command=/usr/sbin/wpa_supplicant
>  : ${wpa_supplicant_conf:=/etc/wpa_supplicant.conf}
>  wpa_supplicant_if=${wpa_supplicant_if:+-i}$wpa_supplicant_if
> -command_args="$wpa_supplicant_args -B -c$wpa_supplicant_conf
> $wpa_supplicant_if"
> +command_args="$wpa_supplicant_args -Dnl80211 -B -c$wpa_supplicant_conf
> $wpa_supplicant_if"
>  name="WPA Supplicant Daemon"
>  
>  depend()

The file /etc/init.d/wpa_supplicant is owned by net-wireless/wpa_supplicant-2.4-r3 on Gentoo. I still get the warning but the stacktrace is a bit different:

[    8.560248] systemd-udevd[2270]: starting version 225
[   10.062139] r8169 0000:05:00.0 enp5s0: renamed from eth0
[   10.122364] systemd-udevd[2370]: Process 'net.sh eth0 start' failed with exit code 1.
[   10.321094] Intel(R) Wireless WiFi driver for Linux
[   10.321097] Copyright(c) 2003- 2015 Intel Corporation
[   10.412070] iwlwifi 0000:09:00.0: loaded firmware version 18.168.6.1 op_mode iwldvm

[   11.426246] iwlwifi 0000:09:00.0: CONFIG_IWLWIFI_DEBUG disabled
[   11.426252] iwlwifi 0000:09:00.0: CONFIG_IWLWIFI_DEBUGFS disabled
[   11.426255] iwlwifi 0000:09:00.0: CONFIG_IWLWIFI_DEVICE_TRACING disabled
[   11.426259] iwlwifi 0000:09:00.0: Detected Intel(R) Centrino(R) Wireless-N 1030 BGN, REV=0xB0
[   11.426636] iwlwifi 0000:09:00.0: L1 Disabled - LTR Disabled
[   11.433760] iwlwifi 0000:09:00.0: RF_KILL bit toggled to disable radio.
[   11.448510] ieee80211 phy0: Selected rate control algorithm 'iwl-agn-rs'
[   11.787105] iwlwifi 0000:09:00.0 wlp9s0: renamed from wlan0
[   11.832316] systemd-udevd[2382]: Process 'net.sh wlan0 start' failed with exit code 1.
[   13.125308] cfg80211: World regulatory domain updated:
[   13.125316] cfg80211:  DFS Master region: unset
[   13.125319] cfg80211:   (start_freq - end_freq @ bandwidth), (max_antenna_gain, max_eirp), (dfs_cac_time)
[   13.125324] cfg80211:   (2402000 KHz - 2472000 KHz @ 40000 KHz), (N/A, 2000 mBm), (N/A)
[   13.125328] cfg80211:   (2457000 KHz - 2482000 KHz @ 40000 KHz), (N/A, 2000 mBm), (N/A)
[   13.125332] cfg80211:   (2474000 KHz - 2494000 KHz @ 20000 KHz), (N/A, 2000 mBm), (N/A)
[   13.125336] cfg80211:   (5170000 KHz - 5250000 KHz @ 80000 KHz, 160000 KHz AUTO), (N/A, 2000 mBm), (N/A)
[   13.125341] cfg80211:   (5250000 KHz - 5330000 KHz @ 80000 KHz, 160000 KHz AUTO), (N/A, 2000 mBm), (0 s)
[   13.125345] cfg80211:   (5490000 KHz - 5730000 KHz @ 160000 KHz), (N/A, 2000 mBm), (0 s)
[   13.125348] cfg80211:   (5735000 KHz - 5835000 KHz @ 80000 KHz), (N/A, 2000 mBm), (N/A)
[   13.125352] cfg80211:   (57240000 KHz - 63720000 KHz @ 2160000 KHz), (N/A, 0 mBm), (N/A)
[   18.543856] WARNING: CPU: 3 PID: 3603 at net/mac80211/driver-ops.h:12 ieee80211_bss_info_change_notify+0x1a8/0x1b0()
[   18.543858] wlp9s0:  Failed check-sdata-in-driver check, flags: 0x0
[   18.543860] Modules linked in: fuse uvcvideo x86_pkg_temp_thermal option ums_realtek intel_powerclamp kvm_intel uas iwldvm usb_storage kvm usb_wwan videobuf2_vmalloc videobuf2_memops videobuf2_core iwlwifi
[   18.543876] CPU: 3 PID: 3603 Comm: iwconfig Not tainted 4.3.0-rc7-default-pciehp #1
[   18.543878] Hardware name: Dell Inc. Vostro 3550/, BIOS A12 02/18/2014
[   18.543879]  ffffffff81dd1f48 ffff88040b77fbc8 ffffffff813a42e2 ffff88040b77fc10
[   18.543882]  ffff88040b77fc00 ffffffff810d3031 0000000000040000 ffff8800d96d0aa0
[   18.543885]  ffff88040b71ca40 ffff8800d96d0500 0000000000000002 ffff88040b77fc60
[   18.543888] Call Trace:
[   18.543894]  [<ffffffff813a42e2>] dump_stack+0x44/0x62
[   18.543898]  [<ffffffff810d3031>] warn_slowpath_common+0x81/0xc0
[   18.543901]  [<ffffffff810d30b7>] warn_slowpath_fmt+0x47/0x50
[   18.543904]  [<ffffffff8194d28b>] ? __ieee80211_recalc_txpower+0x1db/0x230
[   18.543907]  [<ffffffff81935748>] ieee80211_bss_info_change_notify+0x1a8/0x1b0
[   18.543909]  [<ffffffff8194d30d>] ieee80211_recalc_txpower+0x2d/0x40
[   18.543912]  [<ffffffff81954713>] ieee80211_set_tx_power+0x43/0x180
[   18.543915]  [<ffffffff819305c6>] cfg80211_wext_siwtxpower+0xa6/0x1a0
[   18.543917]  [<ffffffff819331bb>] ioctl_standard_call+0x4b/0xc0
[   18.543919]  [<ffffffff81933170>] ? ioctl_standard_iw_point+0x370/0x370
[   18.543921]  [<ffffffff81932d9d>] wireless_process_ioctl.constprop.9+0x8d/0xf0
[   18.543924]  [<ffffffff819333cd>] wext_handle_ioctl+0x5d/0xb0
[   18.543928]  [<ffffffff817eb4d9>] dev_ioctl+0x349/0x710
[   18.543933]  [<ffffffff811cf600>] ? handle_mm_fault+0xb40/0x1080
[   18.543936]  [<ffffffff811cf600>] ? handle_mm_fault+0xb40/0x1080
[   18.543939]  [<ffffffff817b3060>] sock_ioctl+0x140/0x2e0
[   18.543942]  [<ffffffff8120e6ac>] do_vfs_ioctl+0x2fc/0x550
[   18.543946]  [<ffffffff819a2346>] ? retint_user+0x18/0x1d
[   18.543949]  [<ffffffff812199a1>] ? __fget_light+0x61/0x90
[   18.543950]  [<ffffffff8120e93c>] SyS_ioctl+0x3c/0x70
[   18.543953]  [<ffffffff819a181b>] entry_SYSCALL_64_fastpath+0x16/0x73
[   18.543955] ---[ end trace 7841181a0e1ddd6c ]---


I also added "-dd" to the startup commandline to increase verbosity but I don't see a difference. However, I see in /var/log/messages:

Nov  2 18:30:15 vostro wpa_supplicant[4656]: Libgcrypt warning: missing initialization - please fix the application
Nov  2 18:30:15 vostro /etc/init.d/net.wlp9s0[4499]: WARNING: net.wlp9s0 has started, but is inactive



At the very moment OpenRC does not log for me any wpa_supplicant output at all, but on console there was something like below ... what has been recorded by previous OpenRC version in /var/log/rc.log some days ago). Just don't ask me why currently logging of the system console does not work. :( In summary, maybe the issue is caused by RFKILLed device during startup?

 * Bringing up interface wlp9s0
 *   Starting wpa_supplicant on wlp9s0 ...
Successfully initialized wpa_supplicant
rfkill: WLAN hard blocked
 [ ok ]
 *   Starting wpa_cli on wlp9s0 ...
 [ ok ]
 *   Backgrounding ... ...
 * WARNING: net.wlp9s0 has started, but is inactive


Will undo now the /etc/init.d/wpa_supplicant changes and test your patch.
Comment 15 Martin Mokrejs 2015-11-02 18:04:26 UTC
(In reply to Emmanuel Grumbach from comment #13)
> Created attachment 191841 [details]
> fix
> 
> Here is the fix. Please test.

It works for 4.3-rc7, thanks.

[   12.515013] Intel(R) Wireless WiFi driver for Linux
[   12.515017] Copyright(c) 2003- 2015 Intel Corporation
[   12.678599] iwlwifi 0000:09:00.0: loaded firmware version 18.168.6.1 op_mode iwldvm
[   13.058603] sd 8:0:0:0: [sdc] 62333952 512-byte logical blocks: (31.9 GB/29.7 GiB)
[   13.059741] sd 8:0:0:0: [sdc] Write Protect is off
[   13.059745] sd 8:0:0:0: [sdc] Mode Sense: 03 00 00 00
[   13.060829] sd 8:0:0:0: [sdc] No Caching mode page found
[   13.060833] sd 8:0:0:0: [sdc] Assuming drive cache: write through
[   13.065851] cfg80211: World regulatory domain updated:
[   13.065865] cfg80211:  DFS Master region: unset
[   13.065869] cfg80211:   (start_freq - end_freq @ bandwidth), (max_antenna_gain, max_eirp), (dfs_cac_time)
[   13.065874] cfg80211:   (2402000 KHz - 2472000 KHz @ 40000 KHz), (N/A, 2000 mBm), (N/A)
[   13.065877] cfg80211:   (2457000 KHz - 2482000 KHz @ 40000 KHz), (N/A, 2000 mBm), (N/A)
[   13.065881] cfg80211:   (2474000 KHz - 2494000 KHz @ 20000 KHz), (N/A, 2000 mBm), (N/A)
[   13.065885] cfg80211:   (5170000 KHz - 5250000 KHz @ 80000 KHz, 160000 KHz AUTO), (N/A, 2000 mBm), (N/A)
[   13.065889] cfg80211:   (5250000 KHz - 5330000 KHz @ 80000 KHz, 160000 KHz AUTO), (N/A, 2000 mBm), (0 s)
[   13.065892] cfg80211:   (5490000 KHz - 5730000 KHz @ 160000 KHz), (N/A, 2000 mBm), (0 s)
[   13.065895] cfg80211:   (5735000 KHz - 5835000 KHz @ 80000 KHz), (N/A, 2000 mBm), (N/A)
[   13.065899] cfg80211:   (57240000 KHz - 63720000 KHz @ 2160000 KHz), (N/A, 0 mBm), (N/A)
[   13.876914] iwlwifi 0000:09:00.0: CONFIG_IWLWIFI_DEBUG disabled
[   13.876924] iwlwifi 0000:09:00.0: CONFIG_IWLWIFI_DEBUGFS disabled
[   13.876930] iwlwifi 0000:09:00.0: CONFIG_IWLWIFI_DEVICE_TRACING disabled
[   13.876938] iwlwifi 0000:09:00.0: Detected Intel(R) Centrino(R) Wireless-N 1030 BGN, REV=0xB0
[   13.877523] iwlwifi 0000:09:00.0: L1 Disabled - LTR Disabled
[   13.885367] iwlwifi 0000:09:00.0: RF_KILL bit toggled to disable radio.
[   13.900742] ieee80211 phy0: Selected rate control algorithm 'iwl-agn-rs'
[   14.022080] iwlwifi 0000:09:00.0 wlp9s0: renamed from wlan0
[   14.072176] systemd-udevd[2338]: Process 'net.sh wlan0 start' failed with exit code 1.

Note You need to log in before you can comment on or make changes to this bug.